--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 		<title>CSS Grid System - otoma01</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="main.css" />
 	</head>
     <body>
         <div class="row">
